[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/options_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/UI assets/blue_panel.png" type="Texture" id=2]
[ext_resource path="res://assets/UI assets/Xerox Sans Serif Narrow Bold Oblique.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/UI assets/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/UI assets/grey_box.png" type="Texture" id=5]
[ext_resource path="res://assets/UI assets/blue_checkmark.png" type="Texture" id=6]
[ext_resource path="res://assets/UI assets/white_button.png" type="Texture" id=7]
[ext_resource path="res://assets/UI assets/icons_128x128.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]

font/size = 60
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 40
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]

font/size = 40
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 4 )

[node name="options_screen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 650, 450 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 70.0
margin/right = 174.0
margin/bottom = 80.0

[node name="Patch9Frame" type="Patch9Frame" parent="MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 650.0
margin/bottom = 450.0
texture = ExtResource( 2 )
modulate = Color( 0.734586, 0.618103, 0.964844, 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Patch9Frame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 602.0
margin/bottom = 410.0
alignment = 0

[node name="title" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 594.0
margin/bottom = 134.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/title"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 177.0
margin/top = 38.0
margin/right = 416.0
margin/bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "SETTINGS"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="settings" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 138.0
margin/right = 594.0
margin/bottom = 272.0
alignment = 1

[node name="music" type="VBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 295.0
margin/bottom = 134.0
alignment = 0

[node name="text" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/music"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 295.0
margin/bottom = 65.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/music/text"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 85.0
margin/top = 9.0
margin/right = 209.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "Music"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="icon" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/music"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 69.0
margin/right = 295.0
margin/bottom = 134.0
alignment = 1

[node name="music" type="TouchScreenButton" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/music/icon"]

transform/pos = Vector2( 129.631, -10 )
transform/scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/music/icon/music"]

transform/pos = Vector2( 18.0881, 18.0881 )
texture = ExtResource( 6 )

[node name="sound" type="VBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 299.0
margin/top = 0.0
margin/right = 594.0
margin/bottom = 134.0
alignment = 0

[node name="text" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/sound"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 295.0
margin/bottom = 65.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/sound/text"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 9.0
margin/right = 227.0
margin/bottom = 55.0
custom_fonts/font = SubResource( 4 )
text = "Sounds"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="icon" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/sound"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 69.0
margin/right = 295.0
margin/bottom = 134.0
alignment = 1

[node name="sound" type="TouchScreenButton" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/sound/icon"]

transform/pos = Vector2( 134, -10 )
transform/scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/sound/icon/sound"]

transform/pos = Vector2( 19.2797, 18.0881 )
texture = ExtResource( 6 )

[node name="buttons" type="HBoxContainer" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 276.0
margin/right = 594.0
margin/bottom = 410.0
alignment = 1

[node name="exit" type="TouchScreenButton" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons"]

transform/pos = Vector2( 249.702, 25.9823 )
transform/scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/exit"]

transform/pos = Vector2( 121.581, 113.622 )
transform/scale = Vector2( 1.01, 1.01 )
texture = ExtResource( 7 )
modulate = Color( 0.257342, 0.243088, 0.699219, 1 )

[node name="icon" type="Sprite" parent="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/exit"]

transform/pos = Vector2( 121.122, 113.5 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )
vframes = 8
hframes = 8
frame = 36
modulate = Color( 0.814087, 0.922443, 0.964844, 1 )

[connection signal="pressed" from="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/music/icon/music" to="." method="_on_music_pressed"]

[connection signal="pressed" from="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/settings/sound/icon/sound" to="." method="_on_sound_pressed"]

[connection signal="pressed" from="MarginContainer/Patch9Frame/MarginContainer/VBoxContainer/buttons/exit" to="." method="_on_exit_pressed"]


